# ffmpeg-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FFmpegAmfHeaders.cmake  FFmpegAppleHardware.cmake  FFmpegConfig.cmake.in  FFmpegExternalDependencyMatrix.cmake  FFmpegExternalProject.cmake  FFmpegGuiOptions.cmake  FFmpegNativeAutoconfig.cmake  FFmpegNativeDependencies.cmake  FFmpegNativeProject.cmake  FFmpegNvCodecHeaders.cmake  FFmpegOfficialSmokeRun.cmake  FFmpegOfficialSmokeTests.cmake  FFmpegOptions.cmake  FFmpegPkgConfigTargets.cmake  FFmpegProjectDefaults.cmake  FFmpegReport.cmake  FFmpegSource.cmake  FindFFmpeg.cmake
cmake/native/: FFmpegNativeComponents.cmake  FFmpegNativeConfigureParser.cmake  FFmpegNativeConsumerRun.cmake  FFmpegNativeConsumerTests.cmake  FFmpegNativeCoverage.cmake  FFmpegNativeDependencyAudit.cmake  FFmpegNativeDeviceCheck.cmake  FFmpegNativeFeatureGraph.cmake  FFmpegNativeGeneratedFiles.cmake  FFmpegNativePlatform.cmake  FFmpegNativePrepareExports.cmake  FFmpegNativeSmokeRun.cmake  FFmpegNativeSmokeTests.cmake  FFmpegNativeSources.cmake  FFmpegNativeTargetSettings.cmake  FFmpegNativeTargets.cmake  README.md
cmake/toolchains/: clang20-libcxx.cmake  clang20-libstdcxx.cmake
examples/consumer-smoke/: CMakeLists.txt  consumer_smoke.c
examples/native-smoke/: CMakeLists.txt  native_smoke.c
examples/smoke/: CMakeLists.txt  smoke.c
